fixed gap on mobile

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -21,11 +21,11 @@ $color-grey-dark-2: rgb(216, 128, 27);
     box-sizing: inherit;
 }
 
-* {
-    background: #000 !important;
-    color: #0f0 !important;
-    outline: solid #f00 1px !important;
-  }
+// * {
+//     background: #000 !important;
+//     color: #0f0 !important;
+//     outline: solid #f00 1px !important;
+//   }
 
 
 html {
